@@ -24,7 +24,15 @@ import static java.util.stream.Collectors.toList;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Base64;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.TreeMap;
 import java.util.stream.Stream;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.SessionNotCreatedException;
@@ -98,7 +106,7 @@ public class ChromiumOptions<T extends ChromiumOptions<?>>
    * @see #addArguments(List)
    */
   public T addArguments(String... arguments) {
-    addArguments(Arrays.asList(arguments));
+    addArguments(List.of(arguments));
     return (T) this;
   }
 
@@ -126,7 +134,7 @@ public class ChromiumOptions<T extends ChromiumOptions<?>>
    * @see #addExtensions(List)
    */
   public T addExtensions(File... paths) {
-    addExtensions(Arrays.asList(paths));
+    addExtensions(List.of(paths));
     return (T) this;
   }
 
@@ -147,7 +155,7 @@ public class ChromiumOptions<T extends ChromiumOptions<?>>
    * @see #addEncodedExtensions(List)
    */
   public T addEncodedExtensions(String... encoded) {
-    addEncodedExtensions(Arrays.asList(encoded));
+    addEncodedExtensions(List.of(encoded));
     return (T) this;
   }
 
