@@ -19,7 +19,6 @@ package org.openqa.selenium.json;
 
 import static java.lang.Integer.valueOf;
 import static java.time.format.DateTimeFormatter.ISO_INSTANT;
-import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonList;
@@ -32,7 +31,6 @@ import static org.openqa.selenium.logging.LogType.CLIENT;
 import static org.openqa.selenium.logging.LogType.DRIVER;
 import static org.openqa.selenium.logging.LogType.SERVER;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
@@ -45,7 +43,6 @@ import java.io.Writer;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -243,7 +240,7 @@ class JsonOutputTest {
 
     MutableCapabilities caps = new DesiredCapabilities("foo", "1", Platform.LINUX);
     caps.setCapability(CapabilityType.PROXY, proxy);
-    Map<String, ?> asMap = ImmutableMap.of("desiredCapabilities", caps);
+    Map<String, ?> asMap = Map.of("desiredCapabilities", caps);
     Command command = new Command(new SessionId("empty"), DriverCommand.NEW_SESSION, asMap);
 
     String json = convert(command.getParameters());
@@ -272,7 +269,7 @@ class JsonOutputTest {
     class ToJsonReturnsMap {
       @SuppressWarnings("unused")
       public Map<String, Object> toJson() {
-        return ImmutableMap.of("cheese", "peas");
+        return Map.of("cheese", "peas");
       }
     }
 
@@ -308,7 +305,7 @@ class JsonOutputTest {
 
     Map<String, Object> value = new Json().toType(json, MAP_TYPE);
 
-    assertThat(value).isEqualTo(ImmutableMap.of("a key", "a value"));
+    assertThat(value).isEqualTo(Map.of("a key", "a value"));
   }
 
   @Test
@@ -317,7 +314,7 @@ class JsonOutputTest {
 
     Map<String, Object> value = new Json().toType(json, MAP_TYPE);
 
-    assertThat(value).isEqualTo(ImmutableMap.of("a key", "a value"));
+    assertThat(value).isEqualTo(Map.of("a key", "a value"));
   }
 
   @Test
@@ -413,7 +410,7 @@ class JsonOutputTest {
     RuntimeException clientError = new UnhandledAlertException("unhandled alert", "cheese!");
     Map<String, Object> obj = new Json().toType(new StringReader(convert(clientError)), Map.class);
     assertThat(obj).containsKey("alert");
-    assertThat(obj.get("alert")).isEqualTo(ImmutableMap.of("text", "cheese!"));
+    assertThat(obj.get("alert")).isEqualTo(Map.of("text", "cheese!"));
   }
 
   @Test
@@ -518,7 +515,7 @@ class JsonOutputTest {
     long timestamp = new Date().getTime();
     final LogEntry entry1 = new LogEntry(Level.OFF, timestamp, "entry1");
     final LogEntry entry2 = new LogEntry(Level.WARNING, timestamp, "entry2");
-    LogEntries entries = new LogEntries(asList(entry1, entry2));
+    LogEntries entries = new LogEntries(List.of(entry1, entry2));
 
     String json = convert(entries);
 
@@ -563,7 +560,7 @@ class JsonOutputTest {
   @Test
   void shouldConvertAUrlToAString() throws MalformedURLException {
     URL url = new URL("http://example.com/cheese?type=edam");
-    Map<String, URL> toConvert = ImmutableMap.of("url", url);
+    Map<String, URL> toConvert = Map.of("url", url);
 
     String seen = new Json().toJson(toConvert);
     JsonObject converted = JsonParser.parseString(seen).getAsJsonObject();
@@ -592,7 +589,7 @@ class JsonOutputTest {
     }
 
     assertThat((Object) new Json().toType(builder.toString(), Object.class))
-        .isEqualTo(Arrays.asList("brie", "peas"));
+        .isEqualTo(List.of("brie", "peas"));
   }
 
   @Test
@@ -610,12 +607,12 @@ class JsonOutputTest {
     }
 
     assertThat((Object) new Json().toType(builder.toString(), MAP_TYPE))
-        .isEqualTo(ImmutableMap.of("cheese", "brie", "vegetable", "peas"));
+        .isEqualTo(Map.of("cheese", "brie", "vegetable", "peas"));
   }
 
   @Test
   void whenConvertingObjectsContainingClassesDoNotBeNoisy() {
-    String json = convert(ImmutableMap.of("thing", SimpleBean.class));
+    String json = convert(Map.of("thing", SimpleBean.class));
 
     JsonObject converted = JsonParser.parseString(json).getAsJsonObject();
 
@@ -627,9 +624,9 @@ class JsonOutputTest {
   @Test
   void canDisablePrettyPrintingToGetSingleLineOutput() {
     Map<String, Object> toEncode =
-        ImmutableMap.of(
-            "ary", Arrays.asList("one", "two"),
-            "map", ImmutableMap.of("cheese", "cheddar"),
+        Map.of(
+            "ary", List.of("one", "two"),
+            "map", Map.of("cheese", "cheddar"),
             "string", "This has a \nnewline in it");
 
     StringBuilder json = new StringBuilder();
@@ -651,8 +648,7 @@ class JsonOutputTest {
 
   @Test
   void shouldNotWriteOptionalFieldsThatAreEmptyInAMap() {
-    String json =
-        convert(ImmutableMap.of("there", Optional.of("cheese"), "notThere", Optional.empty()));
+    String json = convert(Map.of("there", Optional.of("cheese"), "notThere", Optional.empty()));
 
     JsonObject converted = JsonParser.parseString(json).getAsJsonObject();
 
@@ -662,7 +658,7 @@ class JsonOutputTest {
 
   @Test
   void shouldNotWriteOptionalsThatAreNotPresentToAList() {
-    String json = convert(Arrays.asList(Optional.of("cheese"), Optional.empty()));
+    String json = convert(List.of(Optional.of("cheese"), Optional.empty()));
 
     JsonArray converted = JsonParser.parseString(json).getAsJsonArray();
 
@@ -867,7 +863,7 @@ class JsonOutputTest {
     }
 
     public Map<String, Object> asMap() {
-      return ImmutableMap.of("key", "value");
+      return Map.of("key", "value");
     }
   }
 
@@ -881,7 +877,7 @@ class JsonOutputTest {
     }
 
     public Map<String, Object> asMap() {
-      return ImmutableMap.of(key, value);
+      return Map.of(key, value);
     }
   }
 
@@ -895,7 +891,7 @@ class JsonOutputTest {
     }
 
     public Map<String, Object> toMap() {
-      return ImmutableMap.of(key, value);
+      return Map.of(key, value);
     }
   }
 }
