@@ -20,7 +20,6 @@ package org.openqa.selenium.remote;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
@@ -35,9 +34,7 @@ class W3CHandshakeResponseTest {
   void successfulResponseGetsParsedProperly() {
     Capabilities caps = new ImmutableCapabilities("cheese", "peas");
     Map<String, Map<String, Object>> payload =
-        ImmutableMap.of(
-            "value",
-            ImmutableMap.of("capabilities", caps.asMap(), "sessionId", "cheese is opaque"));
+        Map.of("value", Map.of("capabilities", caps.asMap(), "sessionId", "cheese is opaque"));
     InitialHandshakeResponse initialResponse = new InitialHandshakeResponse(0, 200, payload);
 
     ProtocolHandshake.Result result =
@@ -57,7 +54,7 @@ class W3CHandshakeResponseTest {
   void shouldIgnoreAJsonWireProtocolReply() {
     Capabilities caps = new ImmutableCapabilities("cheese", "peas");
     Map<String, ?> payload =
-        ImmutableMap.of("status", 0, "value", caps.asMap(), "sessionId", "cheese is opaque");
+        Map.of("status", 0, "value", caps.asMap(), "sessionId", "cheese is opaque");
     InitialHandshakeResponse initialResponse = new InitialHandshakeResponse(0, 200, payload);
 
     ProtocolHandshake.Result result =
@@ -69,8 +66,7 @@ class W3CHandshakeResponseTest {
   @Test
   void shouldIgnoreAGeckodriver013Reply() {
     Capabilities caps = new ImmutableCapabilities("cheese", "peas");
-    Map<String, ?> payload =
-        ImmutableMap.of("value", caps.asMap(), "sessionId", "cheese is opaque");
+    Map<String, ?> payload = Map.of("value", caps.asMap(), "sessionId", "cheese is opaque");
     InitialHandshakeResponse initialResponse = new InitialHandshakeResponse(0, 200, payload);
 
     ProtocolHandshake.Result result =
@@ -82,9 +78,9 @@ class W3CHandshakeResponseTest {
   @Test
   void shouldProperlyPopulateAnError() {
     Map<String, ?> payload =
-        ImmutableMap.of(
+        Map.of(
             "value",
-            ImmutableMap.of(
+            Map.of(
                 "error", "session not created",
                 "message", "me no likey",
                 "stacktrace", "I have no idea what went wrong"));
